[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/EnemyBody.gd" type="Script" id=1]
[ext_resource path="res://scenes/HPBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/airplanes/Bomber/Bomber_Source.png" type="Texture" id=3]
[ext_resource path="res://assets/airplanes/Bomber/Broken/Bomber Broken 01.png" type="Texture" id=4]
[ext_resource path="res://assets/airplanes/Bomber/Broken/Bomber Broken 03.png" type="Texture" id=5]
[ext_resource path="res://assets/airplanes/Bomber/Broken/Bomber_Broken 02.png" type="Texture" id=6]
[ext_resource path="res://assets/bullets/RPG/3.png" type="Texture" id=7]
[ext_resource path="res://assets/bullets/RPG/4.png" type="Texture" id=8]
[ext_resource path="res://assets/bullets/RPG/1.png" type="Texture" id=9]
[ext_resource path="res://assets/bullets/RPG/2.png" type="Texture" id=10]
[ext_resource path="res://assets/sounds/airplane+prop_planeidle.ogg" type="AudioStream" id=11]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=14]
[ext_resource path="res://scenes/EnemyAI.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/ItemMaker.tscn" type="PackedScene" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [  ],
"loop": false,
"name": "die",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "fire",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "die",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 8 ), null ],
"loop": false,
"name": "fire",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 83.2743, 119.526 )

[node name="Bomber" type="Node2D"]
script = ExtResource( 14 )
HP = 10000

[node name="Body" type="KinematicBody2D" parent="."]
collision_layer = 2
script = ExtResource( 1 )
weapon = 3
bullet_nums = 4
speed = 200
enemy_type = 2

[node name="AnimatedSprites" type="Node2D" parent="Body"]

[node name="LegAnimatedSprite" type="AnimatedSprite" parent="Body/AnimatedSprites"]
rotation = -1.5708
frames = SubResource( 1 )
animation = "walk"

[node name="BodyPivot" type="Node2D" parent="Body/AnimatedSprites"]

[node name="BodyAnimatedSprite" type="AnimatedSprite" parent="Body/AnimatedSprites/BodyPivot"]
position = Vector2( -27, -1 )
rotation = -1.5708
frames = SubResource( 2 )
animation = "fire"

[node name="FireAnimatedSprite" type="AnimatedSprite" parent="Body/AnimatedSprites/BodyPivot"]
position = Vector2( 4.90704, -28.184 )
rotation = -1.5708
frames = SubResource( 3 )
animation = "fire"
frame = 3

[node name="FireAnimatedSprite2" type="AnimatedSprite" parent="Body/AnimatedSprites/BodyPivot"]
position = Vector2( 3.90704, 25.816 )
rotation = -1.5708
frames = SubResource( 3 )
animation = "fire"
frame = 3

[node name="FireAnimatedSprite3" type="AnimatedSprite" parent="Body/AnimatedSprites/BodyPivot"]
position = Vector2( 0.907043, -84.184 )
rotation = -1.5708
frames = SubResource( 3 )
animation = "fire"
frame = 3

[node name="FireAnimatedSprite4" type="AnimatedSprite" parent="Body/AnimatedSprites/BodyPivot"]
position = Vector2( -2.09296, 78.816 )
rotation = -1.5708
frames = SubResource( 3 )
animation = "fire"
frame = 3

[node name="FirePosition" type="Node2D" parent="Body/AnimatedSprites/BodyPivot"]
position = Vector2( 3.74496, -27.6544 )

[node name="FirePosition2" type="Node2D" parent="Body/AnimatedSprites/BodyPivot"]
position = Vector2( 3.74496, 26.3456 )

[node name="FirePosition3" type="Node2D" parent="Body/AnimatedSprites/BodyPivot"]
position = Vector2( -1.25504, -83.6544 )

[node name="FirePosition4" type="Node2D" parent="Body/AnimatedSprites/BodyPivot"]
position = Vector2( -4.25504, 79.3456 )

[node name="AimTimer" type="Timer" parent="Body"]

[node name="FireTimer" type="Timer" parent="Body"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2( -28.0616, -1.12247 )
shape = SubResource( 4 )

[node name="FootStepAudio" type="AudioStreamPlayer2D" parent="Body"]
stream = ExtResource( 11 )
pitch_scale = 1.35
autoplay = true
max_distance = 600.0
attenuation = 0.965935
bus = "sound"

[node name="HPBar" parent="." instance=ExtResource( 2 )]
margin_top = -49.0
margin_bottom = -45.0

[node name="EnemyAI" parent="." instance=ExtResource( 18 )]

[node name="ItemMaker" parent="." instance=ExtResource( 19 )]
